--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -241,7 +241,10 @@ img.main {
 /* Absolute Centering: http://coding.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/ */
 #wordArea {
     font-family: 'Quicksand', sans-serif;
+    white-space: normal;
     font-weight: 400;
+    font-size: 40px;
+    background-color: aqua;
     position: absolute;
     height: 50%;
     width: 50%;
